# trove-api

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 34fcd61c94a9_add_images_table.py  3a48256b3cb5_replace_categories_with_tags.py  3ccda80d0eda_initial_trove_schema.py  4a2e0ae568cc_add_marks_provenance_entries_item_notes_.py  4bd2574895c4_add_refresh_tokens_table.py  62a67799efe0_add_collection_type_and_item_type_fields.py  af85030565fd_initial_schema.py  d4e4fa6bb67b_add_oauth_account_table.py
app/: config.py  image_utils.py  main.py  storage.py  type_registry.py
app/auth/: __init__.py  backend.py  oauth.py  refresh.py  security_logging.py  users.py
app/models/: __init__.py  collection.py  image.py  item.py  item_note.py  mark.py  oauth_account.py  provenance_entry.py  racer.py  refresh_token.py  tag.py  user.py
app/routers/: __init__.py  auth_refresh.py  categories.py  collection_types.py  collections.py  dependencies.py  item_images.py  item_notes.py  items.py  mark_images.py  marks.py  provenance.py  racers.py  tags.py
app/schemas/: __init__.py  collection.py  image.py  item.py  item_note.py  mark.py  provenance_entry.py  racer.py  tag.py  user.py
scripts/: seed.py
tests/: conftest.py  test_collection_types.py  test_collections.py  test_item_images.py  test_item_notes.py  test_items.py  test_mark_images.py  test_marks.py  test_provenance.py  test_racers.py  test_tags.py
